@@ -1,3 +1,5 @@
+- Refactor: Removes unused ManageRegistrationEntryGradeController [#qubIT-Fenix-6559]
+
 7.24.2 (04-02-2025)
 - Refactor: Remove reference to non-existing method [#UL-ISA-5417]
 
